# iyou_home

./: .gitignore  .gitmodules  CHANGELOG.md  Client-Side_Multi-DID_Orchestrator.md  DEVELOPER_GUIDE.md  HOME_DEVELOPER_GUIDE.md  LICENSE  README.md  architecture_audit_report.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/certs/: production.crt
src-tauri/src/: blossom.rs  bridge.rs  certs.rs  lib.rs  main.rs  nostr_relay.rs  prosody.rs  vault.rs
src/__tests__/: App.test.tsx  TrustAssets.test.tsx  setup.ts
src/components/: IpfsArchiveViewer.tsx  KeysManager.tsx  SovereignSigner.tsx  TrustAssets.tsx  WsSignPopup.tsx
