[package]
name = "iyou-home"
version = "0.2.0-SOVEREIGN-RELEASE"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iyou_home_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
did_rust = { path = "../libs/did_rust" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
bs58 = "0.5"
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
quick-xml = "0.31"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
